# Triangle-Demo

./: CMakeLists.txt  README  README.md
cmake/: BuildSettings.hpp.cmake  FindGLEW.cmake
include/Common/: OpenGL.hpp  Prerequisites.hpp
res/: Simple.frag  Simple.vert
src/: CMakeLists.txt
src/Common/: Shader.cpp
src/Triangle-Demo-1/: CMakeLists.txt
src/Unique/: Main.cpp
